--- a/Assets/06.UI/Style/MainStyle.uss
+++ b/Assets/06.UI/Style/MainStyle.uss
@@ -7,8 +7,17 @@
 #container {
     width: 100%;
     height: 100%;
-    padding-left: 50px;
-    padding-right: 50px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+}
+
+.loading {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    position: absolute;
+    transition-property: background-color;
+    transition-duration: 0.5s;
+}
+
+.loading.on {
+    background-color: rgba(0, 0, 0, 255);
 }
